# CueDrop

./: .dockerignore  .gitignore  .pylintrc  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
backend/: .env.example  Dockerfile  audio_analysis.py  camelot.py  chat_handler.py  cli.py  config.py  dj_brain.py  edge_reweighter.py  graph_client.py  guest_handler.py  import_pipeline.py  main.py  models.py  music_resolver.py  orchestrator.py  pyproject.toml  qr_generator.py  queue_manager.py  scraper_service.py  transition_logger.py  transition_planner.py  vdj_client.py
backend/fixtures/: sample_sets.json
backend/tests/: test_audio_analysis.py  test_camelot.py  test_chat_handler.py  test_cli.py  test_config.py  test_dj_brain.py  test_edge_reweighter.py  test_graph_client.py  test_guest_handler.py  test_import_pipeline.py  test_main.py  test_models.py  test_models_extended.py  test_music_resolver.py  test_orchestrator.py  test_qr_generator.py  test_queue_manager.py  test_scraper_service.py  test_transition_logger.py  test_transition_planner.py  test_vdj_client.py
essentia-service/: Dockerfile  server.py
public/: manifest.json  sw.js
scraper/: fingerprinter.py  tracklist_scraper.py  transition_extractor.py  youtube_scraper.py
scraper/tests/: test_fingerprinter.py  test_tracklist_scraper.py  test_transition_extractor.py  test_youtube_scraper.py
src/: App.css  App.jsx  AppShell.jsx  Landing.jsx  TabBar.jsx  index.css  main.jsx
src/admin/: App.jsx  ChatPanel.jsx  GuestRequests.jsx  Home.jsx  NowPlaying.jsx  (+4 more)
(+13 files in other folders)
