[project]
name = "cuedrop-backend"
version = "0.1.0"
description = "CueDrop AI DJ Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "anthropic>=0.52.0",
    "neo4j>=5.28.0",
    "librosa>=0.10.2",
    # essentia — install separately via: pip install essentia-tensorflow
    # (no ARM Mac wheel available, requires Docker or x86 for native build)
    "httpx>=0.28.0",
    "qrcode[pil]>=8.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
scraping = [
    "yt-dlp>=2025.3.0",
    "playwright>=1.51.0",
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
    "acrcloud>=1.0.0",
]

[tool.setuptools]
py-modules = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
